@@ -42,7 +42,7 @@
 #define OPTION_OLDRALLOC       "--oldralloc"
 #define OPTION_FRAMEPOINTER    "--fno-omit-frame-pointer"
 #define OPTION_EMIT_EXTERNS    "--emit-externs"
-#define OPTION_REG_BCALL       "--reg-bcall"
+#define OPTION_LEGACY_BANKING  "--legacy-banking"
 
 static char _z80_defaultRules[] = {
 #include "peeph.rul"
@@ -92,7 +92,7 @@ static OPTION _z80_options[] = {
   {0, OPTION_OLDRALLOC,       &options.oldralloc, "Use old register allocator"},
   {0, OPTION_FRAMEPOINTER,    &z80_opts.noOmitFramePtr, "Do not omit frame pointer"},
   {0, OPTION_EMIT_EXTERNS,    NULL, "Emit externs list in generated asm"},
-  {0, OPTION_REG_BCALL,       &z80_opts.regBankedCall, "Use E:HL to pass bank and address to banked_call"},
+  {0, OPTION_LEGACY_BANKING,  &z80_opts.legacyBanking, "Use legacy method to call banked functions"},
   {0, NULL}
 };
 
@@ -104,7 +104,7 @@ static OPTION _gbz80_options[] = {
   {0, OPTION_CONST_SEG,       &options.const_seg, "<name> use this name for the const segment", CLAT_STRING},
   {0, OPTION_DATA_SEG,        &options.data_seg, "<name> use this name for the data segment", CLAT_STRING},
   {0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "For the z80/gbz80 do not link default crt0.rel"},
-  {0, OPTION_REG_BCALL,       &z80_opts.regBankedCall, "Use A:HL to pass bank and address to banked_call"},
+  {0, OPTION_LEGACY_BANKING,  &z80_opts.legacyBanking, "Use legacy method to call banked functions"},
   {0, NULL}
 };
 
